  * Fix win32 playback on recent versions of Linux
  * Added cropping capability to some video_out drivers (Xv, XvMC, vidix).
    automatic software cropping is provided for drivers not supporting it.
  * Fixed displaying of mpeg2 files where width/height is not a multiple of 16
    (these files required cropping after decoding)
  
xine-lib (1-rc6)
  * Moved win32 frontend into separate module.
  * Fixed Xv initialization to enable multiple instances of the Xv plugin
  * Removed XInitThreads() call from some video out plugins because it
    might lead to undefined behaviour. Calling XInitThreads() is entirely
    the frontend's job.
  * Included goom2k4-dev18 support
  * Made sure the streams are played till their very end
  * Support implemented for Annodex files
  * VobSub-in-Matroska support added.
  * Enable support for guessing and using Windows encoding as
    default for external subtitles.
  * Added quality improvements for full frame rate deinterlacing modes
  * Added support for 44100Hz DTS in .wav files.
  * Added ability to Restore initial xv port attributes on exit
    [bugs #965572, #957599]
  * Fixed brightness drift problem (loss of color) [bugs #947520, #963587]
  * Fixed rare heap overflow with some DVD subpictures [bug #923843]
  * Fixed stack overflows in the VCD plugin
  * Added experimental time stretching plugin: play stream faster or 
    slower than original speed, optionally preserving pitch
  * Fixed another win32 dll crash (after playing several files)
  * Added configure option for building xine with external ffmpeg library
  * Added api for finer playback speed control (requires frontend support)
  * Added support for QuickTime 6.3 DLLs
  * Improved response time on video grabber ports
  * Added support for mp3 audio in mp4 files
  * Added support for using utf-8 for matroska subtitles
  * next stage of MINGW port - engine library compiles now
  * Improved DVD MRL handling.
  * Improved Transport stream handling.